<resources xmlns:xliff="urn:oasis:names:tc:xliff:document:1.2">
    <string name="app_name">Appystore</string>
    <string name="dashboard_activity_redayToPlayTxt">Ready to Play</string>
    <string name="dashboard_activity_moreTxt">There\'s More</string>
    <string name="games_name">Demo</string>
    <string name="AppyStore_Version">Version: 1.0.4</string>
    <string name="dashboard_video_category">English</string>
    <string name="dashboard_video__sub_category_header_txt">Alphabets (44 Videos)</string>
    <string name="dasgboard_activity_category">Maths</string>
    <string name="history_video_count">54 Videos</string>
    <string name="history_video_length_txt">2 min</string>
    <string name="locked_txt">Locked</string>
    <string name="parents_videos_see_all_btn_txt">See All</string>
    <string name="history_video_downloaded_txt">Offline</string>
    <string name="login_header_txt">Welcome to Appystore</string>
    <string name="login_enter_mobile_no_hint">Log In with your subscribed mobile number</string>
    <string name="without_login_txt">Continue without Log In</string>
    <string name="login_enter_button_txt">Enter</string>
    <string name="login_enter_button_loading_txt">Loading</string>
    <string name="login_unsubscribed_user_help_text_1">We are unable to recognize your number!</string>
    <string name="try_again">Try Again</string>
    <string name="or">OR</string>
    <string name="login_unsubscribed_user_help_text_4">Register with this number to gain %1$s day free access</string>
    <string name="txt_my">My</string>
    <string name="txt_named">named</string>
    <string name="txt_children_name_hint">Child\'s Name</string>
    <string name="register_save_and_continue">Save and Continue</string>
    <string name="txt_child_details_line2">is a champion born on</string>
    <string name="txt_children_dob_hint">23rd September 2013</string>
    <string name="txt_son">son/daughter</string>
    <string name="txt_slash">\u00A0/\u00A0</string>
    <string name="txt_daughter">Daughter</string>
    <string name="son_txt">Son</string>
    <string name="txt_login">Login</string>
    <string name="avatar_head_txt">Choose an avatar for your champ</string>
    <string name="avatar_add_another_child_txt">Add Another Child</string>
    <string name="avatar_enter_childs_area_txt">Enter Child\'s Area</string>
    <string name="action_settings">Settings</string>
    <string name="title_activity_subscribe">SubscribeActivity</string>
    <string name="title_activity_content_access">ContentAccessActivity</string>
    <string name="title_activity_notification">NotificationActivity</string>
    <string name="title_activity_subscriptions">SubscriptionsActivity</string>
    <string name="childdetail_choosechild">Choose a Child</string>
    <string name="childdetail_childiv_contentdes">child image</string>
    <string name="childaccess_choose_learning">Choose Learning Area</string>
    <string name="childaccess_childiv_contentdes">child image</string>
    <string name="childaccess_checkbox_childinclude">Include Categories for 5 Years Old</string>
    <string name="childaccess_math">Math</string>
    <string name="childaccess_algebra">Algebra</string>
    <string name="childaccess_numbers">Number</string>
    <string name="childaccess_addition">Addition</string>
    <string name="childaccess_includecategory_txt">Include Categories for 5 Years Old</string>
    <string name="content_access_save_btn_txt">Save</string>
    <string name="content_access_child_name_demo_txt">Aayushi Goyal</string>
    <string name="txt_incl_cat_for">Include Categories for</string>
    <string name="txt_yrs_old">Years Old</string>
    <string name="edit_child_details_txt">Edit Details</string>
    <string name="tab_videos">Videos</string>
    <string name="tab_activity">Activity</string>
    <string name="tab_games">Games</string>
    <string name="tab_history">History</string>
    <string name="title_activity_virtual">VirtualActivity</string>
    <string name="hello_world">Hello world!</string>
    <string name="title_activity_video_play">VideoPlayActivity</string>
    <string name="toolbar_buy_btn">Buy</string>
    <string name="exit_video_txt">Exit the video</string>
    <string name="return_to_video_txt">Return to video</string>
    <string name="video_completion_back_txt">Back</string>
    <string name="video_completion_exit_txt">Exit the video</string>
    <string name="congratulation_txt">Congratulations !</string>
    <string name="video_replay_txt">Replay</string>
    <string name="video_completion_win_txt">You have won yourself a</string>
    <string name="video_completion_bottom_part_header">Watch More Videos</string>
    <string name="video_total_length_txt">00:00:00</string>
    <string name="video_played_length_txt">00:00:00</string>
    <string name="name_age_text">Aayan Goyal - 4 years</string>
    <string name="performance_text">Aayan\'s Performance</string>
    <string name="statistic_1">Statistic 1</string>
    <string name="statistic_2">Statistic 2</string>
    <string name="performance_btn_text">Praise Aayan\'s Performance</string>
    <string name="wishlist_subscribe_btn_txt">Subscribe</string>
    <string name="wishlist_item_demo_txt">Angry Birds Space II</string>
    <string name="wishlist_item_downloads_count_demo_txt">5,600 Downloads</string>
    <string name="wishlist_item_price_demo_txt">Rs 200</string>
    <string name="parents_blog_head_demo_txt">Language &amp; Communication</string>
    <string name="parents_blog_item_type_demo_txt">An Attitude of Gratitude</string>
    <string name="parents_blog_item_post_time_demo_txt">2 days ago</string>
    <string name="font_name_passing_notes">passing_notes.ttf</string>
    <string name="font_name_shadows_into_light">shadows_into_light.ttf</string>
    <string name="wishlist_details_item_name_demo_txt">Angry Birds Space II</string>
    <string name="wishlist_details_item_downloads_count_demo_txt">5,600 Downloads</string>
    <string name="wishlist_details_age_demo_txt">Age 3&#8211;6</string>
    <string name="wishlist_details_item_price_demo_txt">Rs. 200</string>
    <string name="wishlist_details_item_info_demo_txt">In publishing and graphic design, lorem ipsum is a filler text commonly used to demonstrate the graphic elements of a document or visual presentation. Replacing meaningful content with placeholder text allows viewers to focus on graphic aspects such as font, typography, and</string>
    <string name="wishlist_details_item_back_txt">Back to Games Section</string>
    <string name="parent_dashboard_header_txt">Parent\'s Area</string>
    <string name="no_email_client_found_prompt">There are no email clients installed.</string>
    <string name="header_contact_us_txt">Contact Us</string>
    <string name="notification_header1_demo_txt">Lorem Ipsum</string>
    <string name="notification_txt1_demo_txt">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla </string>
    <string name="subscribtion_done_btn_txt">Subscibe</string>
    <string name="subscription_plan_txt">Rs 150/pm</string>
    <string name="subscription_plan_body_txt">- Unlimited access to Appystore</string>
    <string name="subscription_available_plan_txt">Available Plans</string>
    <string name="subscription_plan_header_text">Please select for which age group yo need FREE Worksheets</string>
    <string name="subscription_age_2_3_txt">2-3 years</string>
    <string name="subscription_age_3_4_txt">3-4 years</string>
    <string name="subscription_age_4_5_txt">4-5 years</string>
    <string name="subscription_age_5_6_txt">5-6 years</string>
    <string name="name_txt">Name</string>
    <string name="address_txt">Address</string>
    <string name="mob_txt">Mob No.</string>
    <string name="city_txt">City</string>
    <string name="pincode_txt">Pincode</string>
    <string name="state_txt">State</string>
    <string name="billng_shppng_dfrnt_txt">My billing address is different from shipping address</string>
    <string name="continue_btn_txt">Continue</string>
    <string name="payment_congrats_txt">Congratulation Mario Rues! Your sunscription for 1 month is confirmed! Now let Thomas enjoy unlimited content!</string>
    <string name="watch_videos_txt">Watch Videos</string>
    <string name="choose_payment_optn_txt">Choose Payment Option</string>
    <string name="faq_txt">FAQs</string>
    <string name="faq_demo_txt1">Lorem ipsum dolor sit amet, consectetur adipiscing elit ?</string>
    <string name="faq_demo_txt2">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor  , consequat ?</string>
    <string name="faq_demo_txt3">Lorem ipsum dolor sit amet, consectetur ?</string>
    <string name="rate_app_submit_btn_txt">Submit</string>
    <string name="rate_app_rate_us_txt">Rate Us</string>
    <string name="rate_app_write_feedback_txt">Write a Feedback</string>
    <string name="hint_help_you_txt">Let me help you</string>
    <string name="hint_dialog_hint_demo_txt">Count to 1 in one hand and 2 in other</string>
    <string name="choose_answer_header_txt">Choose the correct answer from the options</string>
    <string name="already_subscribed_txt">Allready Subscribed?</string>
    <string name="subscribe_header_txt">Enjoy unlimited created content for your kids</string>
    <string name="subscription_mobile_number_hint">Please enter your ten digit mobile number</string>
    <string name="new_subscriber_txt">New Subscriber?</string>
    <string name="new_subscription_content_txt">Enjoy unlimited supply of useful and curated content for your kids</string>
    <string name="activity_number_add_head_txt">Choose the correct answer from the options</string>
    <string name="txt_qns_mark">\?</string>
    <string name="move_to_parent_area_txt">Tap again to move to Parent Section</string>
    <string name="exit_from_app_txt">Press Again To Exit</string>
    <string name="invalid_credential">Invalid credential</string>
    <string name="connection_time_out">Please check your network connectivity</string>
    <string name="check_network_connectivity">Please check your network connectivity</string>
    <string name="enter_mobile_no_prompt">Please enter a valid mobile number.</string>
    <string name="child_dob_prompt">Please Enter Your Child\'s Date of Birth</string>
    <string name="child_name_prompt">Please Enter Your Child\'s Name</string>
    <string name="child_type_prompt">Please Select Your Child\'s Gender</string>
    <string name="register_successfully_toast">You have registered successfully.</string>
    <string name="select_avatar_prompt">Please Select an Avatar for Your Child</string>
    <string name="child_year_prompt">Your Child\'s Age Must be 1 year &amp; 6 months - 8 Years</string>
    <string name="a_new_update_is_available_">A new update is available!</string>
    <string name="upgrade_to_the_new_version_of_appystore_and_leverage_an_unlimited_content">Upgrade to the new version of Appystore \n and leverage an unlimited content</string>
    <string name="skip">Skip</string>
    <string name="update_now">Update Now</string>
    <string name="rate_us_header">Rate Us</string>
    <string name="rate_us_exp_txt">How is your experience with appystore?</string>
    <string name="rate_us_gplay_txt">Rate us on google play</string>
    <string name="rate_us_nhappy_txt">Not happy :(</string>
    <string name="rate_us_loveit_txt">Love it! :)</string>
    <string name="enter_otp_msg_1">Kindly Enter the One Time Password</string>
    <string name="enter_otp_msg_2">sent to %1$s</string>
    <string name="submit">Submit</string>
    <string name="resend_code"><u>Resend code</u></string>
    <string name="hint_otp">Enter OTP</string>
</resources>