<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:AppystoreLite="http://schemas.android.com/apk/res-auto"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/linear_parent"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/rounded_bg_otp_dialog">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/rounded_bg_otp_dialog"
        android:gravity="center"
        android:orientation="vertical"
        android:layout_centerInParent="true">

        <com.appy.store.lite.customviews.CustomTextView
            android:id="@+id/otp_msg_1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:text="@string/enter_otp_msg_1"
            android:textColor="@color/black"
            android:textSize="@dimen/otp_dialog_msg"
            AppystoreLite:fontName="@string/font_name_passing_notes" />

        <com.appy.store.lite.customviews.CustomTextView
            android:id="@+id/otp_msg_2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/dp_5"
            android:gravity="center_horizontal"
            android:paddingLeft="10dp"
            android:paddingRight="10dp"
            android:text="@string/enter_otp_msg_2"
            android:textColor="@color/black"
            android:textSize="@dimen/otp_dialog_msg"
            AppystoreLite:fontName="@string/font_name_passing_notes" />

        <com.appy.store.lite.customviews.CustomEditText
            android:id="@+id/et_otp_code"
            android:gravity="center"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:ems="10"
            android:layout_marginTop="@dimen/dp_20"
            android:background="@drawable/edit_text_otp"
            android:inputType="number"
            android:maxLength="10"
            android:padding="@dimen/dp_5"
            android:hint="@string/hint_otp"
            android:textColor="@color/text_color_dark_gray"
            AppystoreLite:fontName="@string/font_name_passing_notes" />


        <com.appy.store.lite.customviews.CustomTextView
            android:id="@+id/tv_otp_submit"
            android:layout_width="@dimen/rate_us_dialog_btn_width"
            android:layout_height="@dimen/rate_us_dialog_btn_height"
            android:layout_marginTop="@dimen/dp_15"
            android:background="@drawable/btn_submit_with_shadow"
            android:gravity="center"
            android:text="@string/submit"
            android:textColor="@color/black"
            android:textSize="@dimen/h3"
            AppystoreLite:fontName="@string/font_name_passing_notes" />

        <com.appy.store.lite.customviews.CustomTextView
            android:id="@+id/tv_resend_otp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/dp_10"
            android:gravity="bottom"
            android:text="@string/resend_code"
            android:textColor="@color/text_color_dark_gray"
            android:textSize="@dimen/h3"
            AppystoreLite:fontName="@string/font_name_passing_notes" />

        <com.appy.store.lite.progress.helper.AppystoreLoadingIndicator
            android:id="@+id/loadingIndicatorOTP"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:visibility="gone"
            app:indicator="BallPulse"
            app:indicator_color="@color/progress_loading_color_blue" />

    </LinearLayout>

    <!--Cross Button-->
    <ImageButton
        android:id="@+id/ibtn_dialog_close"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentRight="true"
        android:layout_alignParentTop="true"
        android:background="@null"
        android:src="@drawable/close_icon_dark" />

</RelativeLayout>