<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:AppystoreLite="http://schemas.android.com/apk/res-auto"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/child_dashboard_background"
    android:orientation="vertical" >

    <com.appy.store.lite.customviews.CustomTextView
        android:id="@+id/tv_message"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="@dimen/dp_25"
        AppystoreLite:fontName="@string/font_name_passing_notes"
        android:text="@string/a_new_update_is_available_"
        android:textColor="@android:color/white"
        android:textSize="@dimen/login_header_txt"
        android:textStyle="bold" />

    <com.appy.store.lite.customviews.CustomTextView
        android:id="@+id/tv_body"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true"
        android:gravity="center"
        AppystoreLite:fontName="@string/font_name_passing_notes"
        android:text="@string/upgrade_to_the_new_version_of_appystore_and_leverage_an_unlimited_content"
        android:textColor="@android:color/white"
        android:textSize="@dimen/register_screen_txt"
        android:textStyle="normal" />

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="@dimen/dp_20"
        android:orientation="horizontal" >

        <RelativeLayout
            android:id="@+id/btn_skip_RL"
            android:layout_width="@dimen/update_screen_btn_width"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="@dimen/margin_five"
            android:background="@drawable/subscribed_number_enter_button"
            android:paddingLeft="@dimen/dp_15"
            android:paddingRight="@dimen/dp_15" >

            <com.appy.store.lite.customviews.CustomTextView
                android:id="@+id/btn_skip"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerInParent="true"
                AppystoreLite:fontName="@string/font_name_passing_notes"
                android:text="@string/skip"
                android:textColor="@color/enter_childs_area_btn_txt_clr"
                android:textSize="@dimen/sp_20"
                android:textStyle="bold" />
        </RelativeLayout>

        <RelativeLayout
            android:id="@+id/btn_update_RL"
            android:layout_width="@dimen/update_screen_btn_width"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="@dimen/margin_five"
            android:background="@drawable/subscribed_number_enter_button"
            android:paddingLeft="@dimen/dp_15"
            android:paddingRight="@dimen/dp_15" >

            <com.appy.store.lite.customviews.CustomTextView
                android:id="@+id/btn_update"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerInParent="true"
                AppystoreLite:fontName="@string/font_name_passing_notes"
                android:text="@string/update_now"
                android:textColor="@color/enter_childs_area_btn_txt_clr"
                android:textSize="@dimen/sp_20"
                android:textStyle="bold" />
        </RelativeLayout>
    </LinearLayout>

</RelativeLayout>